welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:5: error: type mismatch;
 found   : Unit
 required: String
    } else if (day <= 1){
           ^alarmClock:11: error: type mismatch;
 found   : Unit
 required: String
  		} else if (day <= 1){
                       ^alarmClock:8: error: type mismatch;
 found   : Unit
 required: String
  } else if (!vacation){
         ^